# fedbot

./: .gitignore  README.md  base-config.yaml  build.sh  lint.sh  maubot.yaml  mypy.ini  pyproject.toml  requirements.txt  tox.ini
federationbot/: __init__.py  api.py  cache.py  constants.py  controllers.py  delegation.py  errors.py  events.py  federation.py  primitives.py  protocols.py  repairs.py  requests.py  resolver.py  responses.py  server_result.py  tracing.py  types.py  utils.py
federationbot/commands/: __init__.py  common.py  room_walk.py
federationbot/requests/: __init__.py  backoff.py  requests.py
federationbot/resolver/: __init__.py  aiohttp_threaded_resolver.py  dns.py  resolver.py
federationbot/utils/: __init__.py  bitmap_progress.py  colors.py  commands.py  display.py  formatting.py  matrix.py  numbers.py  structures.py  time.py
