[tool.isort]
profile = "black"
force_to_top = "typing"
from_first = true
combine_as_imports = true
line_length = 120

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pylint]
disable = [
  "line-too-long",
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-instance-attributes",
  "too-many-return-statements",
  "too-many-statements",
]

[tool.poetry]
name = "federationbot"
version = "0.1.1"
description = "Maubot plugin for diagnosing Matrix federation response"
authors = ["Jason Little <realtyem@gmail.com>"]
repository = "https://github.com/realtyem/federationbot"
packages = [{ include = "federationbot" }]

[tool.poetry.dependencies]
python = "^3.12.0"
canonicaljson = "^2.0.0"
more-itertools = "^10.5.0"
unpaddedbase64 = "^2.1.0"
mautrix = { path = "../mautrix-python" }
maubot = { path = "../maubot" }
signedjson = "^1.1.4"
backoff = "^2.2.1"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
pylint = "^3.3.3"
types-commonmark = "^0.9.2.20240106"
types-setuptools = "^75.8.0.20250110"
aiodns = "^3.2.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "PLR0904", # too-many-public-methods
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0915", # too-many-statements
  "PLR0917", # too-many-positional-arguments
]

[tool.ruff.lint.isort]
force-to-top = ["typing"]
combine-as-imports = true
from-first = true
